<resources>
    <string name="app_name">Home</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="pass">""</string>
    <string name="email">""</string>
    <string name="textview">Tài khoản</string>
    <string name="textview1">Mật khẩu</string>

    <string name="title_activity_main">Login to Home</string>
    <string name="title_activity_main3">Nhà</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Minh Đức</string>
    <string name="nav_header_subtitle">duc2521997@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Refresh</string>
    <string name="textview4">Đăng nhập</string>
    <string name="update_data">Đang cập nhật...</string>
    <string name="state">trang thai</string>
    <string name="onoff">cong tac</string>
    <string name="name">thiet bi</string>
    <string name="textview6">Home</string>
    <string name="textview8">IndieTeam</string>
    <string name="whatnew">*Fix bug \n * Push notifications \n * New theme \n * Swipe down to refresh \n * Auto open menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
