<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="212dp"
        android:layout_height="59dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="116dp"
        android:text="@string/textview4"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/pass"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="0dp"
        android:layout_marginEnd="127dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="19dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_login"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="166dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="51dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="168dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="56dp"
        android:text="@string/textview1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="197dp"
        android:layout_height="28dp"
        android:layout_marginEnd="107dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="120dp"
        android:text="@string/textview6"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="856dp"
        android:layout_height="27dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="163dp"
        android:text="@string/textview8"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</android.support.constraint.ConstraintLayout>